--- a/index.html
+++ b/index.html
@@ -1,1 +1,141 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Gombe State University Portal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0; padding: 0;
+            background: #f5f5f5;
+        }
+        header {
+            background: #188a36;
+            color: white;
+            padding: 24px 0 10px 0;
+            text-align: center;
+        }
+        .slogan {
+            font-size: 18px;
+            font-style: italic;
+            margin: 0 0 8px 0;
+            color: #eaffed;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background: #e5e5e5;
+            padding: 10px 0;
+            flex-wrap: wrap;
+        }
+        nav button {
+            margin: 5px 10px;
+            padding: 10px 24px;
+            font-size: 16px;
+            border: none;
+            background: #188a36;
+            color: white;
+            cursor: pointer;
+            border-radius: 4px;
+            transition: background 0.2s;
+        }
+        nav button:hover {
+            background: #116228;
+        }
+        .container {
+            max-width: 600px;
+            margin: 40px auto;
+            background: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+            text-align: center;
+        }
+        .dashboard-btn {
+            display: inline-block;
+            margin: 32px 0 0 0;
+            padding: 16px 40px;
+            background: #188a36;
+            color: #fff;
+            font-size: 20px;
+            font-weight: bold;
+            border-radius: 6px;
+            border: none;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background 0.2s;
+        }
+        .dashboard-btn:hover {
+            background: #116228;
+        }
+        footer {
+            background: #188a36;
+            color: white;
+            text-align: center;
+            padding: 14px 0;
+            font-size: 18px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            left: 0;
+        }
+        /* Responsive styles */
+        @media (max-width: 700px) {
+            .container {
+                width: 95%;
+                padding: 16px;
+            }
+            nav button, .dashboard-btn {
+                font-size: 15px;
+                padding: 9px 18px;
+            }
+            header {
+                padding: 15px 0 7px 0;
+            }
+            .slogan {
+                font-size: 15px;
+            }
+            footer {
+                font-size: 15px;
+            }
+        }
+        @media (max-width: 450px) {
+            .container {
+                padding: 8px;
+            }
+            nav button, .dashboard-btn {
+                font-size: 13px;
+                padding: 7px 12px;
+            }
+            .dashboard-btn {
+                margin-top: 22px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Gombe State University</h1>
+        <div class="slogan">Primus inter pares.</div>
+        <!-- <img src="logo.png" alt="School Logo" style="height:60px;"> -->
+    </header>
+    <nav>
+        <button onclick="alert('Home clicked!')">Home</button>
+        <button onclick="alert('About clicked!')">About</button>
+        <button onclick="alert('Contact clicked!')">Contact</button>
+    </nav>
+    <div class="container">
+        <h2>Welcome Students!</h2>
+        <p>
+            Access important resources and connect with your school community.
+        </p>
+        <a href="https://gsu-cs.web.app/" class="dashboard-btn" target="_blank">
+            Student Dashboard Login
+        </a>
+    </div>
+    <footer>
+        The page by: AIMAN NURUDDEEN.
+    </footer>
+</body>
+</html>
