--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             margin: 0 0 8px 0;
             color: #eaffed;
         }
+        .cs-header {
+            font-size: 24px;
+            font-weight: bold;
+            margin: 10px 0 0 0;
+            color: #fff;
+            letter-spacing: 1px;
+        }
         nav {
             display: flex;
             justify-content: center;
@@ -96,6 +103,9 @@
             .slogan {
                 font-size: 15px;
             }
+            .cs-header {
+                font-size: 18px;
+            }
             footer {
                 font-size: 15px;
             }
@@ -111,6 +121,9 @@
             .dashboard-btn {
                 margin-top: 22px;
             }
+            .cs-header {
+                font-size: 15px;
+            }
         }
     </style>
 </head>
@@ -118,6 +131,7 @@
     <header>
         <h1>Gombe State University</h1>
         <div class="slogan">Primus inter pares.</div>
+        <div class="cs-header">Computer Science Department</div>
         <!-- <img src="logo.png" alt="School Logo" style="height:60px;"> -->
     </header>
     <nav>
@@ -126,9 +140,9 @@
         <button onclick="alert('Contact clicked!')">Contact</button>
     </nav>
     <div class="container">
-        <h2>Welcome Students!</h2>
+        <h2>Welcome Computer Science Students!</h2>
         <p>
-            Access important resources and connect with your school community.
+            Access important resources and connect with your department and school community.
         </p>
         <a href="https://gsu-cs.web.app/" class="dashboard-btn" target="_blank">
             Student Dashboard Login
