changes on index

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </a>
     </div>
     <footer>
-        The page by: AIMAN SSG.
+        The page by: TEAM WE THE ONES.
     </footer>
 </body>
 </html>
